tests/fail/same_path_different_modes.msh
# Test error case - same path with different append modes should fail
[sh -c "echo test"] `same_path_modes.txt` > `same_path_modes.txt` 2>> !
